--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <meta property="og:description" content="Watch this video with a GIF preview thumbnail" />
     <!-- The following og:url and og:image will help Discord show a rich preview without displaying the raw URL.
          Replace the content values with your actual domain and desired preview image if needed -->
-    <meta property="og:url" content="https://your-website.com/embed.html" />
-    <meta property="og:image" content="https://your-website.com/path/to/default_preview.jpg" />
+    <meta property="og:url" content="https://tiktokcmnt.vercel.app/index.html" />
+    <meta property="og:image" content="https://tiktokcmnt.vercel.app/path/to/default_preview.jpg" />
     <meta name="twitter:card" content="player" />
     <meta name="twitter:title" content="Embedded Video" />
     <meta name="twitter:description" content="Watch this video with a GIF preview thumbnail" />
-    <meta name="twitter:player" content="https://your-website.com/embed.html" />
+    <meta name="twitter:player" content="https://tiktokcmnt.vercel.app/index.html" />
     <meta name="twitter:player:width" content="1280" />
     <meta name="twitter:player:height" content="720" />
     <style>
